tests/testdata/test/type_check_with_doc.out
Check [WILDCARD]/tests/testdata/test/type_check.ts
Check [WILDCARD]/tests/testdata/test/type_check.ts$2-5.ts
error: TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const a: string = 1;
      ^
    at file://[WILDCARD]/tests/testdata/test/type_check.ts:8:7

TS2322 [ERROR]: Type 'string' is not assignable to type 'number'.
const b: number = "1";
      ^
    at file://[WILDCARD]/tests/testdata/test/type_check.ts$2-5.ts:1:7

Found 2 errors.
